--- a/CRUD_Razor_2_1/Pages/BooksList/Index.cshtml
+++ b/CRUD_Razor_2_1/Pages/BooksList/Index.cshtml
@@ -9,6 +9,16 @@
 <a asp-page="Create" class="btn btn-primary">Create Book</a>
 <br /><br />
 
+@if(Model.Message != null)
+{
+    <div class="alert alert-success alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+        @Model.Message
+    </div>
+}
+
 @if (Model.Books.Count() <= 0)
 {
     <h2>No books stored in database</h2>
@@ -16,21 +26,29 @@
 
 else
 {
-    <table class="table">
-        <tr>
-            <th>@Html.DisplayNameFor(x => x.Books.FirstOrDefault().Name)</th>
-            <th>@Html.DisplayNameFor(x => x.Books.FirstOrDefault().Author)</th>
-            <th>@Html.DisplayNameFor(x => x.Books.FirstOrDefault().ISBN)</th>
-        </tr>
-        @foreach(var item in Model.Books)
-        {
-        <tr>
-            <td>@Html.DisplayFor(x => item.Name)</td>
-            <td>@Html.DisplayFor(x => item.Author)</td>
-            <td>@Html.DisplayFor(x => item.ISBN)</td>
-        </tr>
-        }
-    </table>    
+    <form method="post">
+        <table class="table">
+            <tr>
+                <th>@Html.DisplayNameFor(x => x.Books.FirstOrDefault().Name)</th>
+                <th>@Html.DisplayNameFor(x => x.Books.FirstOrDefault().Author)</th>
+                <th>@Html.DisplayNameFor(x => x.Books.FirstOrDefault().ISBN)</th>
+            </tr>
+            @foreach (var item in Model.Books)
+            {
+                <tr>
+                    <td>@Html.DisplayFor(x => item.Name)</td>
+                    <td>@Html.DisplayFor(x => item.Author)</td>
+                    <td>@Html.DisplayFor(x => item.ISBN)</td>
+                    <td>
+                        <a asp-page="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-warning">Edit</a>
+                    </td>                    
+                    <td>
+                        <button asp-page-handler="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-danger">Delete</button>
+                    </td>
+                </tr>
+            }
+        </table>
+    </form>
 }
 
 
